test/express/layers/valid/views/JsonView.js
module.exports = {
    render: function(req, res, result) {
        res.send(result);
    }
};